[workspace]
members = [
    "cli",
    "daemon",
    "core",
    "rockerfile-parser",
    "compose"
]
resolver = "2"

[workspace.dependencies]
# Common dependencies for all crates
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
thiserror = "1.0.56"
anyhow = "1.0.78"
clap = { version = "4.4.11", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1.75"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
sha2 = "0.10.8"
base64 = "0.21.5"
url = "2.5.0"
reqwest = { version = "0.11.23", features = ["json"] }
tempfile = "3.9.0"
nix = "0.27.1"
log = "0.4.20"
regex = "1.10.2"
rand = "0.8.5" 
