[package]
name = "rocker-compose"
version = "0.1.0"
edition = "2021"
authors = ["Rocker Team"]
description = "Compose tool for the Rocker container engine"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rocker-core = { path = "../core" } 
