[package]
name = "rocker-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Rocker Team"]
description = "Daemon for the Rocker container engine"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
rocker-core = { path = "../core" }
rockerfile-parser = { path = "../rockerfile-parser" }

[[bin]]
name = "rockerd"
path = "src/main.rs" 
